@@ -65,7 +65,7 @@ rtems_isr_entry set_vector(                   /* returns old vector */
 void _CPU_Thread_Idle_body( void )
 {
   while (1) {
-    LEON_REG.Power_Down = 0;   /* value is irrelevant */
+    LEON_REG.Power_Down = LEON_REG.Power_Down;   /* make sure on load follows store to power-down reg */
   }
 }
 
